name:                ekg
version:             0.4.0.14
synopsis:            Remote monitoring of processes
description:
  This library lets you remotely monitor a running process over HTTP.
  It provides a simple way to integrate a monitoring server into any
  application.
homepage:            https://github.com/tibbe/ekg
bug-reports:         https://github.com/tibbe/ekg/issues
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          Johan Tibell <johan.tibell@gmail.com>,
                     Mikhail Glushenkov <mikhail.glushenkov@gmail.com>
category:            System, Network
build-type:          Simple
data-files:          assets/index.html assets/monitor.js assets/monitor.css
                     assets/jquery.flot.min.js assets/jquery-1.6.4.min.js
                     assets/bootstrap-1.4.0.min.css
                     assets/chart_line_add.png assets/cross.png
extra-source-files:  LICENSE.icons LICENSE.javascript README.md
                     assets/jquery-1.6.4.js assets/jquery.flot.js
                     assets/bootstrap-1.4.0.css
                     examples/Basic.hs CHANGES.md
cabal-version:       >= 1.10
tested-with:         GHC == 8.2.1, GHC == 8.0.1, GHC == 7.10.1, GHC == 7.8.4, GHC == 7.6.3

flag allow-th
  description: enable Template Haskell to embed assets.
  default: False
  manual: True

library
  exposed-modules:
    System.Remote.Counter
    System.Remote.Gauge
    System.Remote.Label
    System.Remote.Monitoring

  other-modules:
    Paths_ekg
    System.Remote.Json
    System.Remote.Snap
    System.ExtractEmbedded

  build-depends:
    aeson >= 0.4 && < 1.5,
    base >= 4.5 && < 4.12,
    bytestring < 1.0,
    directory,
    ekg-core >= 0.1 && < 0.2,
    ekg-json >= 0.1 && < 0.2,
    filepath < 1.5,
    network < 2.7,
    snap-core < 1.1,
    snap-server < 1.2,
    text < 1.3,
    time < 1.9,
    transformers < 0.6,
    unordered-containers < 0.3
  if flag(allow-th)
    build-depends:
      file-embed
  
  default-language: Haskell2010

  default-extensions: CPP
  if flag(allow-th)
    CPP-Options: -DALLOW_TH
  
  ghc-options: -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg.git
